# ezlife

./: .gitignore  AGENTS.md  Makefile  docker-compose.dev.yml  docker-compose.preprod.yml  docker-compose.prod.yml  docker-compose.yml
api/: .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  test_logging.py
api/.sisyphus/plans/: init-project.md
api/alembic/: env.py
api/alembic/versions/: 0b9e69fe990c_add_refresh_tokens_table.py  26cc8d05815b_add_activity_table.py  36360869a898_initial_migration.py  451e5bff2824_add_index_on_refresh_tokens_expires_at.py  4c5bbe1e33cb_migrate_user_id_from_integer_to_uuid.py  5b37f0a8237b_add_exception_dates_to_tasks.py  7d4558e93c61_add_task_tables.py  a1b2c3d4e5f6_alter_activity_end_time_nullable.py  d8f1a2b3c4e5_add_webauthn_credentials_table.py  f497885fdb89_drop_global_constraints_table.py
api/app/: exceptions.py  main.py
api/app/api/: deps.py
api/app/core/: cleanup.py  config.py  exception_handlers.py  logging.py  middleware.py  security.py  tokens.py  webauthn_challenge.py
api/app/db/: session.py
api/app/models/: __init__.py  activity.py  refresh_token.py  task.py  user.py  webauthn_credential.py
api/app/repositories/: activity_repository.py  insights_repository.py  task_repository.py  user_repository.py
api/app/schemas/: activity.py  error.py  (+5 more)
api/docs/: error-codes.md
api/tests/: test_activity_service.py  test_auth.py  test_auth_service.py  test_import_service.py  test_insights_service.py  test_task_service.py  test_timer.py  test_webauthn.py
(+166 files in other folders)
